# MLHL-gradwork-server

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml
chart/: Chart.yaml  values.yaml
gwserver/: __init__.py  r.txt
gwserver/api/: __init__.py  api.py
gwserver/api/base/: router.py
gwserver/api/base/handler/: __init__.py  get_one.py  list_all.py
gwserver/api/controller/: __init__.py  category.py  image.py
gwserver/api/controller/category/: controller.py
gwserver/api/controller/image/: __init__.py  controller.py
gwserver/api/router/: __init__.py
gwserver/api/router/category/: router.py
gwserver/api/router/image/: router.py
gwserver/api/router/image/handler/: __init__.py  get_sample.py  post_image.py
gwserver/api/schema/: __init__.py  error.py  schema.py
gwserver/api/view/: __init__.py  category.py  image.py
gwserver/cli/: __init__.py  cli.py
gwserver/cli/database/: __init__.py  database.py
gwserver/cli/database/migrations/: config.py
gwserver/cli/database/migrations/versions/: 000000000001_initial_state.py  000000000002_default_data.py  44e31fc2aea1_add_default_data.py  c8f2b7fa3eff_add_initial_state.py
gwserver/cli/init/: __init__.py  init.py
gwserver/cli/start/: __init__.py  start.py
gwserver/controller/base/: __init__.py  base.py
gwserver/core/: __init__.py
gwserver/core/config/: config.py
gwserver/core/database/: __init__.py  database.py
gwserver/core/s3/: __init__.py  s3.py
gwserver/interface/: __init__.py  category.py  image.py
gwserver/interface/base/: __init__.py  base.py  typings.py
gwserver/model/: __init__.py  category.py  image.py  model.py
gwserver/model/constant/: __init__.py
gwserver/schema/: __init__.py  response.py
gwserver/schema/error/: __init__.py  base.py  error.py
gwserver/tasks/: __init__.py  predict.py  tasks.py  upload.py
gwserver/typings/: __init__.py  typings.py
