[tool.poetry]
name = "gwserver"
version = "0.1.0"
description = ""
authors = ["Sergey Pavlov <self@sergeypavlov.dev>"]

[tool.poetry.dependencies]
python = "~3.11"
starlite = "*"
pydantic = "*"
typer = "*"
uvicorn = {version = "*", extras = ["standard"]}
gunicorn = "*"
dramatiq = {version = "*", extras = ["rabbitmq", "watch"]}
alembic = "*"
sqlalchemy = "*"
psycopg2 = "*"
boto3 = "*"
pandas = "*"
pillow = "*"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
isort = "*"
mypy = "*"

[tool.isort]
multi_line_output = 3
profile = "black"
skip_glob = ["*/migrations/*", "*.pyx"]

[tool.mypy]
exclude = "migrations|tasks"
ignore_missing_imports = true
show_error_codes = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gwserver = "gwserver.cli:entrypoint"
