[tool.poetry]
name = "gwserver"
version = "0.1.0"
description = ""
authors = ["Sergey Pavlov <self@sergeypavlov.dev>"]

[tool.poetry.dependencies]
python = "~3.10"
starlite = "^1.51.7"
pydantic = "^1.10.6"
typer = "^0.7.0"
uvicorn = {version = "^0.21.0", extras = ["standard"]}
gunicorn = "^20.1.0"
dramatiq = {version = "^1.14.1", extras = ["rabbitmq", "watch"]}
alembic = "^1.10.2"
sqlalchemy = "^2.0.6"
psycopg2 = "^2.9.5"
boto3 = "^1.26.89"
pandas = "^1.5.3"
pillow = "^9.4.0"
onnxruntime-gpu = "^1.14.1"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.2"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.12"
isort = "^5.12.0"
mypy = "^1.1.1"

[tool.isort]
multi_line_output = 3
profile = "black"
skip_glob = ["*/migrations/*", "*.pyx"]

[tool.mypy]
exclude = "migrations|tasks"
ignore_missing_imports = true
show_error_codes = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gwserver = "gwserver.cli:entrypoint"
